Fixed bug with invalid input fields not showing red when focused.

--- a/web/css/html5client.less
+++ b/web/css/html5client.less
@@ -596,9 +596,9 @@ a.buttonLink:hover
 	color:@color_primary;
 }
 
-.large_form input.invalid
+.large_form input.invalid,.large_form input.invalid:active
 {
-	border-bottom:3px solid #e54545; /* #e5b8b8 */
+	border-bottom:3px solid #e54545 !important; /* #e5b8b8 */
 }
 
 .large_form input[type="password"].half
