--- a/web/css/html5client_brown.css
+++ b/web/css/html5client_brown.css
@@ -475,8 +475,9 @@ a.buttonLink:hover {
   border-color: #7e4f2e;
   color: #7e4f2e;
 }
-.large_form input.invalid {
-  border-bottom: 3px solid #e54545;
+.large_form input.invalid,
+.large_form input.invalid:active {
+  border-bottom: 3px solid #e54545 !important;
   /* #e5b8b8 */
 
 }
